Fixing bugs in DTWax and building out more tests

--- a/test/test_suite.ipynb
+++ b/test/test_suite.ipynb
@@ -22,6 +22,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import imageio.v2 as imageio\n",
+    "\n",
+    "# Matrix size\n",
+    "size = 20\n",
+    "steps = size * 2  # Total computation steps\n",
+    "\n",
+    "# Initialize matrix\n",
+    "matrix = np.zeros((size, size))\n",
+    "\n",
+    "# Store frames\n",
+    "frames = []\n",
+    "\n",
+    "for step in range(steps):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    \n",
+    "    # Simulate wavefront computation\n",
+    "    for i in range(size):\n",
+    "        for j in range(size):\n",
+    "            if i + j <= step:  # Diagonal wavefront condition\n",
+    "                matrix[i, j] = (i + j) / (2 * size)  # Normalized values for visualization\n",
+    "\n",
+    "    # Plot the current state\n",
+    "    cax = ax.imshow(matrix, cmap=\"plasma\", vmin=0, vmax=1)\n",
+    "    plt.colorbar(cax)\n",
+    "\n",
+    "    # Save frame\n",
+    "    fig.canvas.draw()\n",
+    "    frame = np.array(fig.canvas.renderer.buffer_rgba())\n",
+    "    frames.append(frame)\n",
+    "\n",
+    "    plt.close(fig)  # Avoid memory leaks\n",
+    "\n",
+    "# Save as GIF\n",
+    "imageio.mimsave(\"wavefront_computation.gif\", frames, duration=0.1)  # Adjust speed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
